--- a/ftc.tex
+++ b/ftc.tex
@@ -898,69 +898,104 @@ for the VR method.
 \section{Experiments and Discussions}
 \label{sec:experiments}
 
+In this section, we evaluate our methods with five scientific workflow applications, whose 
+runtime information is gathered from real execution traces. We conduct a simulation-based 
+approach in which we vary system parameters such as the task failures inter-arrival time 
+in order to evaluate the reliability of our fault-tolerant task clustering methods.
 
-In this section, we evaluate our methods with five workflows, whose runtime information is gathered from real execution traces. The simulation-based approach allows us to control system parameters such as the inter-arrival time of task failures in order to clearly demonstrate the reliability of the algorithms. 
 
-\subsection{Scientific workflow applications}
+\subsection{Scientific Workflow Applications}
 \label{sec:applications}
 
-The five widely used scientific workflow applications are: LIGO Inspiral analysis~\cite{LIGO}, Montage~\cite{Berriman2004}, CyberShake~\cite{Graves2010}, Epigenomics~\cite{Epigenome}, and SIPHT~\cite{SIPHT}. In this subsection, we describe each workflow application and present their main characteristics and structures.
+In the experiments, we use the following scientific workflow applications: LIGO Inspiral 
+analysis, Montage, CyberShake, Epigenomics, and SIPHT. Below, we briefly describe 
+each of them and present their main characteristics and structures:
 
-\paragraph{\textbf{LIGO}}
+\noindent \textbf{LIGO.}
+Laser Interferometer Gravitational Wave Observatory (LIGO)~\cite{LIGO} workflows are 
+used to search for gravitational wave signatures in data collected by large-scale interferometers. 
+The observatories' mission is to detect and measure gravitational waves predicted by general 
+relativity (Einstein's theory of gravity), in which gravity is described as due to the curvature of 
+the fabric of time and space. Fig.~\ref{fig:evaluation-shape-ligo} shows a simplified version of
+the workflow. The LIGO Inspiral workflow is separated into multiple groups of interconnected 
+tasks, which we call branches in the rest of this work. Each branch may have a different number 
+of pipelines. The LIGO workflow is a data-intensive workflow.
+
 \begin{figure}[!htb]
 	\centering
 	\includegraphics[width=0.5\linewidth]{ligo_shape.pdf} \\
 	\caption{A simplified visualization of the LIGO Inspiral workflow.}
-	\label{fig:evaluation_shape_ligo}
+	\label{fig:evaluation-shape-ligo}
 \end{figure}
-Laser Interferometer Gravitational Wave Observatory (LIGO)~\cite{LIGO} workflows are used to search for gravitational wave signatures in data collected by large-scale interferometers. The observatories' mission is to detect and measure gravitational waves predicted by general relativity (Einstein's theory of gravity), in which gravity is described as due to the curvature of the fabric of time and space. The LIGO Inspiral workflow is a data-intensive workflow. Figure~\ref{fig:evaluation_shape_ligo} shows a simplified version of this workflow. The LIGO Inspiral workflow is separated into multiple groups of interconnected tasks, which we call branches in the rest of our paper. However, each branch may have a different number of pipelines as shown in Figure~\ref{fig:evaluation_shape_ligo}. 
 
-\begin{figure}[htb]
+\noindent \textbf{Montage.}
+Montage~\cite{Berriman2004} is an astronomy application that is used to construct large image 
+mosaics of the sky. Input images are reprojected onto a sphere and overlap is calculated for each 
+input image. The application re-projects input images to the correct orientation while keeping 
+background emission level constant in all images. The images are added by rectifying them to a 
+common flux scale and background level. Finally the reprojected images are co-added into a final 
+mosaic. The resulting mosaic image can provide a much deeper and detailed understanding of the 
+portion of the sky in question. Fig.~\ref{fig:evaluation-shape-montage} illustrates a small Montage 
+workflow. The size of the workflow depends on the number of images used in constructing the desired 
+mosaic of the sky. 
+
+\begin{figure}[!htb]
 	\centering
-	\includegraphics[width=0.45\linewidth]{montage_shape.pdf} \\
+	\includegraphics[width=0.4\linewidth]{montage_shape.pdf} \\
 	\caption{A simplified visualization of the Montage workflow.}
-	\label{fig:evaluation_shape_montage}
+	\label{fig:evaluation-shape-montage}
 \end{figure}
 
-\paragraph{\textbf{Montage}}
-Montage~\cite{Berriman2004} is an astronomy application that is used to construct large image mosaics of the sky. Input images are reprojected onto a sphere and overlap is calculated for each input image. The application re-projects input images to the correct orientation while keeping background emission level constant in all images. The images are added by rectifying them to a common flux scale and background level. Finally the reprojected images are co-added into a final mosaic. The resulting mosaic image can provide a much deeper and detailed understanding of the portion of the sky in question. Figure~\ref{fig:evaluation_shape_montage} illustrates a small Montage workflow. The size of the workflow depends on the number of images used in constructing the desired mosaic of the sky. 
-%The structure of the workflow changes to accommodate increases in the number of inputs, which corresponds to an increase in the number of computational tasks.
+\noindent \textbf{Cybershake.}
+CyberShake~\cite{Graves2010} is a seismology application that calculates probabilistic seismic hazard 
+curves for geographic sites in the Southern California region. It identifies all ruptures within 200km of the 
+site of interest and converts rupture definition into multiple rupture variations with differing hypocenter 
+locations and slip distributions. It then calculates synthetic seismograms for each rupture variance, and 
+peak intensity measures are then extracted from these synthetics and combined with the original rupture 
+probabilities to produce probabilistic seismic hazard curves for the site. Fig.~\ref{fig:evaluation-shape-cybershake} 
+shows an illustration of the Cybershake workflow.
 
-\begin{figure}[htb]
+\begin{figure}[!htb]
 	\centering
-	\includegraphics[width=0.55\linewidth]{cybershake_shape.pdf} \\
+	\includegraphics[width=0.53\linewidth]{cybershake_shape.pdf} \\
 	\caption{A simplified visualization of the CyberShake workflow.}
-	\label{fig:evaluation_shape_cybershake}
+	\label{fig:evaluation-shape-cybershake}
 \end{figure}
 
-\paragraph{\textbf{Cybershake}}
-CyberShake~\cite{Graves2010} is a seismology application that calculates Probabilistic Seismic Hazard curves for geographic sites in the Southern California region. It identifies all ruptures within 200km of the site of interest and converts rupture definition into multiple rupture variations with differing hypocenter locations and slip distributions. It then calculates synthetic seismograms for each rupture variance, and peak intensity measures are then extracted from these synthetics and combined with the original rupture probabilities to produce probabilistic seismic hazard curves for the site. Figure~\ref{fig:evaluation_shape_cybershake} shows an illustration of the Cybershake workflow.
+\noindent \textbf{Epigenomics.}
+The Epigenomics workflow~\cite{Epigenome} is a CPU-intensive application. Initial data are acquired 
+from the Illumina-Solexa Genetic Analyzer in the form of DNA sequence lanes. Each Solexa machine 
+can generate multiple lanes of DNA sequences. These data are converted into a format that can be used 
+by sequence mapping software. The workflow maps DNA sequences to the correct locations in a reference 
+Genome. Then it generates a map that displays the sequence density showing how many times a certain 
+sequence expresses itself on a particular location on the reference genome. The simplified structure of 
+Epigenomics is shown in Fig.~\ref{fig:evaluation-shape-genome}. 
 
-\begin{figure}[htb]
+\begin{figure}[!htb]
 	\centering
 	\includegraphics[width=0.8\linewidth]{genome_shape.pdf} \\
 	\caption{A simplified visualization of the Epigenomics workflow with multiple branches.}
-	\label{fig:evaluation_shape_genome}
+	\label{fig:evaluation-shape-genome}
 \end{figure}
 
-\paragraph{\textbf{Epigenomics}}
-The Epigenomics workflow~\cite{Epigenome} is a CPU-intensive application. Initial data are acquired from the Illumina-Solexa Genetic Analyzer in the form of DNA sequence lanes. Each Solexa machine can generate multiple lanes of DNA sequences. These data are converted into a format that can be used by sequence mapping software.
-%The mapping software can do one of two major tasks.
-It then maps DNA sequences to the correct locations in a reference Genome. This generates a map that displays the sequence density showing how many times a certain sequence expresses itself on a particular location on the reference genome. The simplified structure of Epigenomics is shown in Figure~\ref{fig:evaluation_shape_genome}. 
-%Different to the LIGO Inspiral workflow, each branch in Epigenomics has exactly the same number of pipelines, which makes it more symmetric. 
+\noindent \textbf{SIPHT.}
+The SIPHT workflow~\cite{SIPHT} conducts a wide search for small untranslated RNAs (sRNAs) that 
+regulates several processes such as secretion or virulence in bacteria. The kingdom-wide prediction and 
+annotation of sRNA encoding genes involves a variety of individual programs that are executed in the 
+proper order using Pegasus~\cite{Deelman2005}. These involve the prediction of $\rho$-independent 
+transcriptional terminators, BLAST (Basic Local Alignment Search Tools~\cite{BLAST}) comparisons 
+of the inter genetic regions of different replicons and the annotations of any sRNAs that are found. 
+A simplified structure of the SIPHT workflow is shown in Fig.~\ref{fig:evaluation-shape-sipht}. 
 
 \begin{figure}[htb]
 	\centering
-	\includegraphics[width=0.6\linewidth]{sipht_shape.pdf} \\
+	\includegraphics[width=0.55\linewidth]{sipht_shape.pdf} \\
 	\caption{A simplified visualization of the SIPHT workflow.}
-	\label{fig:evaluation_shape_sipht}
+	\label{fig:evaluation-shape-sipht}
 \end{figure}
 
-\paragraph{\textbf{SIPHT}}
-The SIPHT workflow~\cite{SIPHT} conducts a wide search for small untranslated RNAs (sRNAs) that regulates several processes such as secretion or virulence in bacteria. The kingdom-wide prediction and annotation of sRNA encoding genes involves a variety of individual programs that are executed in the proper order using Pegasus~\cite{Deelman2005}. These involve the prediction of $\rho$-independent transcriptional terminators, BLAST (Basic Local Alignment Search Tools~\cite{BLAST}) comparisons of the inter genetic regions of different replicons and the annotations of any sRNAs that are found. A simplified structure of the SIPHT workflow is shown in Figure~\ref{fig:evaluation_shape_sipht}. 
-
-
-
+Table~\ref{tab:evaluation-workflows} shows the summary of the main \emph{workflow characteristics}: 
+number of tasks, average data size, and average task runtimes for the five workflows. 
 
 \begin{table}[!htb]
 	\setlength{\tabcolsep}{11pt}
@@ -979,10 +1014,8 @@ The SIPHT workflow~\cite{SIPHT} conducts a wide search for small untranslated RN
 		\hline
 	\end{tabular}
 	\caption{Summary of the scientific workflows characteristics.}
-	\label{tab:evaluation_workflows}
+	\label{tab:evaluation-workflows}
 \end{table} 
-
-Table~\ref{tab:evaluation_workflows} shows the summary of the main \textbf{workflow characteristics}: number of tasks, average data size, and average task runtimes for the five workflows. 
 
 
 % Experiment conditions
@@ -997,7 +1030,7 @@ We collected workflow execution traces~\cite{Juve2013, Chen2011} (including over
 Three sets of experiments are conducted. Experiment 1 evaluates the performance of our fault-tolerant clustering methods (DR, VR, and SR) over an existing task clustering method (HC) that is not fault-tolerant for the five workflows. The goal of the experiment is to identify conditions where each method works best and worst. In addition, we also evaluate the performance improvement with different $\theta_{\gamma}$ (the inter-arrival time of task failures). The range of $\theta_{\gamma}$ is chosen from 10x to 1x of the average task runtime such that the workflows do not run forever and we can visualize the performance difference better. 
 
 
-Experiment 2 evaluates the performance impact of the variation of the average task runtime per level (defined as the average of all the tasks per level) and the average system overheads per level for one scientific workflow application (CyberShake). In particular, we are interested in the performance of DR based on the results of Experiment 1 and we use $\theta_{\gamma}=100$ since it illustrates well the difference between the four methods. The original average task runtime of all the tasks of the CyberShake workflow is about 23 seconds as shown in Table~\ref{tab:evaluation_workflows}. In this experiment, we multiply the average task runtime by a multiplier from 0.5 to 1.3. The average of the system overheads is 50 seconds originally based on our traces and we multiply the system overheads by a multiplier from 0.2 to 1.8.  
+Experiment 2 evaluates the performance impact of the variation of the average task runtime per level (defined as the average of all the tasks per level) and the average system overheads per level for one scientific workflow application (CyberShake). In particular, we are interested in the performance of DR based on the results of Experiment 1 and we use $\theta_{\gamma}=100$ since it illustrates well the difference between the four methods. The original average task runtime of all the tasks of the CyberShake workflow is about 23 seconds as shown in Table~\ref{tab:evaluation-workflows}. In this experiment, we multiply the average task runtime by a multiplier from 0.5 to 1.3. The average of the system overheads is 50 seconds originally based on our traces and we multiply the system overheads by a multiplier from 0.2 to 1.8.  
 
 Experiment 3 evaluates the performance of dynamic estimation and static estimation. In the static estimation process, we only use the prior knowledge to estimate the MLEs of the unknown parameters. In the dynamic estimation process, we also leverage the runtime data collected during the execution and update the MLEs respectively. 
 
