--- a/ftc.tex
+++ b/ftc.tex
@@ -1145,65 +1145,50 @@ $\tau$ from $0.1T_c$ to $0.5T_c$.
 \subsection{Results and Discussion}
 \label{sec:results}
 
-\textbf{Experiment 1.}
-Figure~\ref{fig:expr_sipht}, \ref{fig:expr_genome}, \ref{fig:expr_cybershake}, \ref{fig:expr_ligo} and \ref{fig:expr_montage} show the performance of the four reclustering methods (DR, SR, VR and HC) with five workflows respectively. We draw conclusions: 
+\noindent \textbf{Experiment 1.}
+Fig.~\ref{fig:exp1} shows the performance of the Horizontal Clustering (HC), Selective 
+Reclustering (SR), Dynamic Reclustering (DR), and Vertical Reclustering (VR) methods 
+for the five workflows. DR, SR, and VR significantly improve the makespan when compared 
+to HC in a large scale. By decreasing of the inter-arrival time~($\theta_{\gamma}$) and 
+consequently generating more task failures, the performance improvement for our fault-tolerant 
+task clustering methods becomes more significant. Among the three methods, DR and VR 
+perform consistently better than SR, which fails to improve the makespan when $\theta_{\gamma}$ 
+is small. The reason is that SR does not adjust $k$ according to the occurrence of failures. 
 
-
-\begin{figure}[!htb]
-\centering
-  \includegraphics[width=1\linewidth]{sipht.eps}
-  \caption{Experiment 1: SIPHT Workflow}
-  \label{fig:expr_sipht}
+\begin{figure}[!t]
+	\centering
+	
+	\includegraphics[width=.836\linewidth]{ligo} \\
+	\small (a) LIGO workflow \\ \vspace{3pt}
+	\includegraphics[width=.836\linewidth]{montage} \\
+	\small (b) Montage workflow \\ \vspace{3pt}
+	\includegraphics[width=.836\linewidth]{cybershake} \\
+	\small (c) CyberShake workflow \\ \vspace{3pt}
+	\includegraphics[width=.836\linewidth]{genome} \\
+	\small (d) Epigenomics workflow \\ \vspace{3pt}
+	\includegraphics[width=.836\linewidth]{sipht} \\
+	\small (e) SIPHT workflow \\ \vspace{3pt}
+	
+	\caption{(\emph{Experiment 1}) Performance evaluation of our fault-tolerant task clustering methods for different values of the inter-arrival time~($\theta_{\gamma}$).}
+  \label{fig:exp1}
 \end{figure}
 
-
-\begin{figure}[!htb]
-\centering
-  \includegraphics[width=1.0\linewidth]{genome.eps}
-  \caption{Experiment 1: Epigenomics Workflow}
-  \label{fig:expr_genome}
-\end{figure}
-
-
-1). DR, SR and VR have significantly improved the makespan compared to HC in a large scale. By decreasing of the inter-arrival time ($\theta_{\gamma}$) and consequently generating more task failures, the performance difference becomes more significant. 
-
-
-\begin{figure}[!htb]
-\centering
-  \includegraphics[width=1.0\linewidth]{cybershake.eps}
-  \caption{Experiment 1: CyberShake Workflow}
-  \label{fig:expr_cybershake}
-\end{figure}
-
-
-
-
-
-
-2). Among the three methods, DR and VR perform consistently better than SR, which fails to improve the makespan when $\theta_{\gamma}$ is small. The reason is that SR does not adjust $k$ according to the occurrence of failures. 
-%It is more significant when there is a high failure rate ($\theta_{\gamma}$ is small). 
-
-\begin{figure}[!htb]
-\centering
-  \includegraphics[width=1\linewidth]{ligo.eps}
-  \caption{Experiment 1: LIGO Workflow}
-  \label{fig:expr_ligo}
-\end{figure}
-
-3). The performance of VR is highly related to the workflow structure and the average task runtime. For example, according to Figure \ref{fig:evaluation_shape_genome} and Table \ref{tab:evaluation_workflows}, we know that the Epigenomics workflow has a long task runtime (around 50 minutes) and the pipeline length is 4. It means vertical clustering creates really long jobs ($\sim 50\times 4=200$ minutes) and thereby VR is more sensitive to the decrease of $\gamma$. As indicated in Figure \ref{fig:expr_genome}, the makespan increases more significantly with the decrease of $\theta_{\gamma}$ than other workflows. In comparison, the CyberShake workflow does not leave much space for vertical clustering methods to improve the makespan since it does not have many pipelines as shown in Figure~\ref{fig:evaluation_shape_cybershake}. In addition, the average task runtime of the CyberShake workflow is relatively short (around 23 seconds). Compared to horizontal clustering methods such as HC, SR and DR, vertical clustering does not generate long jobs and thus the performance of VR is less  sensitive to $\theta_{\gamma}$. 
+The performance of VR is tightly coupled to the workflow structure and the average task runtime. 
+For example, according to Fig.~\ref{fig:evaluation-shape-genome} and Table~\ref{tab:evaluation-workflows}, 
+the Epigenomics workflow has a long task runtime (around 50 minutes) and the pipeline length is 4. 
+This means that vertical clustering creates very long jobs ($\sim50 \times 4 = 200$ minutes) and 
+thereby VR is more sensitive to the decrease of $\gamma$. As indicated in Fig.~\ref{fig:exp1}.d, 
+the makespan increases more significantly with the decrease of $\theta_{\gamma}$ than for other 
+workflows. In contrast, vertical clustering does not improve makespan in the CyberShake workflow 
+(Fig.~\ref{fig:exp1}.c) since it does not have many pipelines (Fig.~\ref{fig:evaluation-shape-cybershake}). 
+In addition, the average task runtime of the CyberShake workflow is relatively short (around 23 
+seconds). Compared to horizontal clustering methods such as HC, SR and DR, vertical clustering 
+does not generate long jobs and thus the performance of VR is less sensitive to $\theta_{\gamma}$. 
 
 %4). Under some cases, i.e., the CyberShake workflow, we see that VR does not perform well compared to DR or SR. The reason is the graph structure of the CyberShake workflow does not leave much space for vertical clustering methods to improve since it does not have many pipelines as shown in Figure~\ref{fig:evaluation_shape_cybershake}. DR, a modification of HC, is more likely to improve the performance since most of these workflows have many parallel tasks in the same level. 
 
-
-
-\begin{figure}[!htb]
-\centering
-  \includegraphics[width=1\linewidth]{montage.eps}
-  \caption{Experiment 1: Montage Workflow}
-  \label{fig:expr_montage}
-\end{figure}
-
-\textbf{Experiment 2}
+\vspace{5pt}
+\noindent \textbf{Experiment 2.}
 Figure~\ref{fig:expr_t} shows the performance of our methods with different multiplier of $\theta_{t}$ for the CyberShake workflow. We can see that with the increase of the multiplier, the makespan of the workflow increases significantly (increase from a scale of $10^4$ to $\sim 10^6$), particularly for HC. The reason is HC is not fault-tolerant and it is highly sensitive to the increase of task runtime. While for DR, the reclustering process dynamically adjusts the clustering size based on the estimation of task runtime and thus the performance of DR is more stable. 
 %VR?
 \begin{figure}[!htb]
